--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -7,3 +7,11 @@
 # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
+
+# Nunchuck skills
+- skill: Nunchuck
+  description: Napoleon
+
+# Computer hacking
+- skill: Computer hacking
+  description: Dynamite
